--- a/EN/en.html
+++ b/EN/en.html
@@ -5,8 +5,8 @@
     <meta name="viewport" charset="utf-8" content="width=device-width initial-scale= 1.0">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta name="description" content="APAV">
-    <meta name="author" content="APAV">
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <meta name="author" content="Unilatem">
+    <link rel="shortcut icon" href="../images/favicon.ico">
     <!--|Meta Config.|-->
 
     <!--|Title Tab|-->
@@ -14,7 +14,8 @@
     <!--|Title Tab|-->
 
     <!--|CSS|-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
+
     <!-- Adicionar a folha de estilo (CSS) do AOS -->
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
@@ -35,33 +36,37 @@
 
     <main>
       <section id="sc1">
-        <h1 class="tt1">Social Project<br><br>e Evangelismo</h1>
+        <div class="video-fundo">
+          <video autoplay loop>
+            <source src="../images/APAV.mp4" type="video/mp4">
+            Your browser don't support this video.
+          </video>
+        </div>
+        <h1 class="tt1">Social Project<br><br>and Evangelism</h1>
       </section>
       <section id="inspiracao">
         <div class="dv1">
-          <h2 class="tt2">FAITH CHRISTIAN INSPIRATION</h2>
+          <h2 class="tt2">INSPIRED BY CHRISTIAN FAITH</h2>
           <p class="tx1">
-            The Project Association Alcançando Lifes dedica-se a servir ao próximo, levando o amor de Deus às comunidades mais necessitadas.
+            The Project Association Reaching Lifes is dedicated to serving others, bringing God's love to the communities most in need.
             <br>
             <br>
-            Em Heliópolis e em outras regiões, trabalhamos incansavelmente para melhorar a qualidade de vida de famílias em situação de vulnerabilidade, oferecendo alimentos, apoio materno e promovendo a inclusão social.
+            In Heliópolis and other regions, we work tirelessly to improve the quality of life of families in vulnerable situations, offering food, maternal support and promoting social inclusion.
             <br>
             <br>
-            Nossas caravanas levam esperança a casas de recuperação, aldeias indígenas e comunidades carentes em diversos países. Acreditamos que a fé em ação é capaz de transformar vidas e construir um futuro mais promissor para todos."
+            Our caravans bring hope to recovery houses, indigenous villages and needy communities in different countries. We believe that faith in action is capable of transforming lives and building a more promising future for everyone."
           </p>
         </div>
-      </section>
-      <section class="sc3">
         <div class="dv2">
           <div class="dv3">
-            <img class="im1" src="images/1.JPG">
+            <img class="im1" src="../images/1.JPG">
           </div>
           <div class="dv3">
             <h2 class="tt3">Mission</h2>
             <p class="tx2">
-              Promover o desenvolvimento e bem-estar de famílias em situação de vulnerabilidade social, oferecendo suporte, recursos e capacitação que possibilitem a construção de uma vida digna e autossuficiente.
+              Promote the development and well-being of families in situations of social vulnerability, offering support, resources and training that enable them to build a dignified and self-sufficient life.
               <br>
-              Nossa missão é construir uma rede de apoio que fortaleça os vínculos comunitários e contribua para a redução das desigualdades sociais. Buscamos oferecer oportunidades de crescimento e promover a autonomia de todas as famílias que atendemos.
+              Our mission is to build a support network that strengthens community ties and contributes to reducing social inequalities. We seek to offer opportunities for growth and promote the autonomy of all the families we serve.
             </p>
           </div>
         </div>
@@ -69,51 +74,51 @@
           <div class="dv3">
             <h2 class="tt3">Vision</h2>
             <p class="tx2">
-              Ser uma referência nacional em assistência e apoio a famílias em situação de vulnerabilidade, contribuindo para a construção de uma sociedade mais justa, inclusiva e solidária.
+              To be a national reference in assistance and support for families in vulnerable situations, contributing to the construction of a fairer, more inclusive and supportive society.
               <br>
-              Aspiramos um futuro onde todas as famílias tenham acesso a direitos e oportunidades, superando barreiras sociais e alcançando uma melhor qualidade de vida.
+              We aspire to a future where all families have access to rights and opportunities, overcoming social barriers and achieving a better quality of life.
             </p>
           </div>
           <div class="dv3">
-            <img class="im1" src="images/2.JPG">
+            <img class="im1" src="../images/2.JPG">
           </div>
         </div>
         <div class="dv2">
           <div class="dv3">
-            <img class="im1" src="images/3.JPG">
+            <img class="im1" src="../images/3.JPG">
           </div>
           <div class="dv3">
             <h2 class="tt3">Values</h2>
             <p class="tx2">
-              Empatia: Colocamo-nos no lugar do outro, buscando compreender e atender às necessidades específicas de cada família com respeito e sensibilidade.
+              Empathy: We put ourselves in other people's shoes, seeking to understand and meet the specific needs of each family with respect and sensitivity.
               <br>
               <br>
-              Transparência: Agimos com clareza e responsabilidade em todas as ações, promovendo confiança e respeito junto às famílias, parceiros e colaboradores.
+              Transparency: We act with clarity and responsibility in all actions, promoting trust and respect among families, partners and employees.
               <br>
               <br>
-              Compromisso Social: Somos dedicados à causa da transformação social e trabalhamos incansavelmente para proporcionar melhoria contínua nas vidas das famílias que apoiamos.
+              Social Commitment: We are dedicated to the cause of social transformation and work tirelessly to provide continuous improvement in the lives of the families we support.
               <br>
               <br>
-              Solidariedade: Acreditamos na força da comunidade e no poder da união para superar desafios e construir um ambiente mais inclusivo para todos.
+              Solidarity: We believe in the strength of the community and the power of unity to overcome challenges and build a more inclusive environment for everyone.
               <br>
               <br>
-              Resiliência: Enfrentamos obstáculos com determinação e incentivamos as famílias a superarem suas dificuldades, oferecendo suporte contínuo e adaptado a cada realidade.
+              Resilience: We face obstacles with determination and encourage families to overcome their difficulties, offering continuous support adapted to each reality.
             </p>
           </div>
         </div>
       </section>
       <section id="contato">
         <div class="dv4">
-          <h2 class="tt4">Talk to Us</h2>
+          <h2 class="tt4">Contact Us</h2>
           <p class="tx4">R. Viracopos - Vila Heliopolis, São Paulo - SP, 04236-070</p>
-          <p class="tx4">Seg à Seg das 18:00 às 22:00</p>
-          <p class="tx4"><a href="tel:+5511914874136" class="tx41">Telphone: +55 (11) 9 1487-4136</a></p>
+          <p class="tx4">Mon to Sun das 18:00 às 22:00</p>
+          <p class="tx4"><a href="tel:+5511914874136" class="tx41">Celphone: +55 (11) 9 1487-4136</a></p>
           <div class="dv5">
             <a href="https://www.instagram.com/associacaoalcancandovidas/" target="_blank">
-              <img class="im4" src="images/instagram.svg">
+              <img class="im4" src="../images/instagram.svg">
             </a>
             <a href="https://api.whatsapp.com/send?phone=5511914874136&text=%20site?" target="_blank">
-              <img class=im4 src="images/whatsapp.svg">
+              <img class=im4 src="../images/whatsapp.svg">
             </a>
           </div>
         </div>
@@ -124,7 +129,7 @@
     <footer></footer>
 
     <!--|Script|-->
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
     <!--|Script|-->
   </body>
 </html>
