--- a/EN/footer.html
+++ b/EN/footer.html
@@ -1,1 +1,4 @@
-<link href=../style.css rel=stylesheet><footer id=ft><p class=fttx>© 2024 All rights reserved Unilatem<strong id=anoatual><script>document.getElementById("anoatual").innerHTML=(new Date).getFullYear()</script></strong>.</footer>
+<link href="../style.css" rel="stylesheet">
+<footer id="ft">
+    <p class="fttx">© 2025 All rights reserved Associação Project Reaching Lives and Unilatem.
+    </footer>
