--- a/ES/es.html
+++ b/ES/es.html
@@ -5,8 +5,8 @@
     <meta name="viewport" charset="utf-8" content="width=device-width initial-scale= 1.0">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta name="description" content="APAV">
-    <meta name="author" content="APAV">
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <meta name="author" content="Unilatem">
+    <link rel="shortcut icon" href="../images/favicon.ico">
     <!--|Meta Config.|-->
 
     <!--|Title Tab|-->
@@ -14,7 +14,7 @@
     <!--|Title Tab|-->
 
     <!--|CSS|-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <!-- Adicionar a folha de estilo (CSS) do AOS -->
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
@@ -35,85 +35,89 @@
 
     <main>
       <section id="sc1">
-        <h1 class="tt1">Projecto Social<br><br>y Evangelismo</h1>
+        <div class="video-fundo">
+          <video autoplay loop>
+            <source src="../images/APAV.mp4" type="video/mp4">
+            Su navegador no soporta este vídeo.
+          </video>
+        </div>
+        <h1 class="tt1">Proyecto Social<br><br>y Evangelismo</h1>
       </section>
       <section id="inspiracao">
         <div class="dv1">
-          <h2 class="tt2">INSPIRADOS PELA FÉ CRISTÃ</h2>
+          <h2 class="tt2">Inspirados en la fe Cristiana</h2>
           <p class="tx1">
-            A Associação Projeto Alcançando Vidas dedica-se a servir ao próximo, levando o amor de Deus às comunidades mais necessitadas.
+            La Associação Projeto Alcançando Vidas se dedica a servir a los demás, llevando el amor de Dios a las comunidades más necesitadas.
             <br>
             <br>
-            Em Heliópolis e em outras regiões, trabalhamos incansavelmente para melhorar a qualidade de vida de famílias em situação de vulnerabilidade, oferecendo alimentos, apoio materno e promovendo a inclusão social.
+            En Heliópolis y otras regiones trabajamos incansablemente para mejorar la calidad de vida de las familias en situación de vulnerabilidad, ofreciendo alimentación, apoyo materno y promoviendo la inclusión social.
             <br>
             <br>
-            Nossas caravanas levam esperança a casas de recuperação, aldeias indígenas e comunidades carentes em diversos países. Acreditamos que a fé em ação é capaz de transformar vidas e construir um futuro mais promissor para todos."
+            Nuestras caravanas llevan esperanza a casas de recuperación, pueblos indígenas y comunidades necesitadas en diferentes países. Creemos que la fe en acción es capaz de transformar vidas y construir un futuro más prometedor para todos".
           </p>
         </div>
-      </section>
-      <section class="sc3">
         <div class="dv2">
           <div class="dv3">
-            <img class="im1" src="images/1.JPG">
+            <img class="im1" src="../images/1.JPG">
           </div>
           <div class="dv3">
-            <h2 class="tt3">Missão</h2>
+            <h2 class="tt3">Misión</h2>
             <p class="tx2">
-              Promover o desenvolvimento e bem-estar de famílias em situação de vulnerabilidade social, oferecendo suporte, recursos e capacitação que possibilitem a construção de uma vida digna e autossuficiente.
+              Promover el desarrollo y bienestar de las familias en situación de vulnerabilidad social, ofreciendo apoyo, recursos y formación que les permitan construir una vida digna y autosuficiente.
               <br>
-              Nossa missão é construir uma rede de apoio que fortaleça os vínculos comunitários e contribua para a redução das desigualdades sociais. Buscamos oferecer oportunidades de crescimento e promover a autonomia de todas as famílias que atendemos.
+              Nuestra misión es construir una red de apoyo que fortalezca los vínculos comunitarios y contribuya a reducir las desigualdades sociales. Buscamos ofrecer oportunidades de crecimiento y promover la autonomía de todas las familias que atendemos.
             </p>
           </div>
         </div>
         <div class="dv2">
           <div class="dv3">
-            <h2 class="tt3">Visão</h2>
+            <h2 class="tt3">Visión</h2>
             <p class="tx2">
-              Ser uma referência nacional em assistência e apoio a famílias em situação de vulnerabilidade, contribuindo para a construção de uma sociedade mais justa, inclusiva e solidária.
+              Ser un referente nacional en atención y apoyo a familias en situación de vulnerabilidad, contribuyendo a la construcción de una sociedad más justa, inclusiva y solidaria.
               <br>
-              Aspiramos um futuro onde todas as famílias tenham acesso a direitos e oportunidades, superando barreiras sociais e alcançando uma melhor qualidade de vida.
+              Aspiramos a un futuro donde todas las familias tengan acceso a derechos y oportunidades, superando barreras sociales y logrando una mejor calidad de vida.
             </p>
           </div>
           <div class="dv3">
-            <img class="im1" src="images/2.JPG">
+            <img class="im1" src="../images/2.JPG">
           </div>
         </div>
         <div class="dv2">
           <div class="dv3">
-            <img class="im1" src="images/3.JPG">
+            <img class="im1" src="../images/3.JPG">
           </div>
           <div class="dv3">
             <h2 class="tt3">Valores</h2>
             <p class="tx2">
-              Empatia: Colocamo-nos no lugar do outro, buscando compreender e atender às necessidades específicas de cada família com respeito e sensibilidade.
+              Empatía: Nos ponemos en el lugar de los demás, buscando comprender y atender las necesidades específicas de cada familia con respeto y sensibilidad.
               <br>
               <br>
-              Transparência: Agimos com clareza e responsabilidade em todas as ações, promovendo confiança e respeito junto às famílias, parceiros e colaboradores.
+              Transparencia: Actuamos con claridad y responsabilidad en todas las acciones, promoviendo la confianza y el respeto entre familias, socios y empleados.
               <br>
               <br>
-              Compromisso Social: Somos dedicados à causa da transformação social e trabalhamos incansavelmente para proporcionar melhoria contínua nas vidas das famílias que apoiamos.
+              Compromiso Social: Estamos dedicados a la causa de la transformación social y trabajamos incansablemente para brindar una mejora continua en las vidas de las familias que apoyamos.
               <br>
               <br>
-              Solidariedade: Acreditamos na força da comunidade e no poder da união para superar desafios e construir um ambiente mais inclusivo para todos.
+              Solidaridad: Creemos en la fuerza de la comunidad y el poder de la unidad para superar los desafíos y construir un entorno más inclusivo para todos.
               <br>
               <br>
-              Resiliência: Enfrentamos obstáculos com determinação e incentivamos as famílias a superarem suas dificuldades, oferecendo suporte contínuo e adaptado a cada realidade.
+              Resiliencia: Afrontamos los obstáculos con determinación y animamos a las familias a superar sus dificultades, ofreciendo un apoyo continuo y adaptado a cada realidad.
             </p>
           </div>
         </div>
       </section>
       <section id="contato">
         <div class="dv4">
-          <h2 class="tt4">Fale Conosco</h2>
+          <h2 class="tt4">Contáctenos</h2>
           <p class="tx4">R. Viracopos - Vila Heliopolis, São Paulo - SP, 04236-070</p>
-          <p class="tx4">Seg à Seg das 18:00 às 22:00</p>
-          <p class="tx4"><a href="tel:+5511914874136" class="tx41">Telefone: +55 (11) 9 1487-4136</a></p>
+          <p class="tx4">Lun à Dom das 18:00 às 22:00</p>
+          <p class="tx4"><a href="tel:+5511914874136" class="tx41">Teléfono: +55 (11) 9 1487-4136</a></p>
           <div class="dv5">
             <a href="https://www.instagram.com/associacaoalcancandovidas/" target="_blank">
-              <img class="im4" src="images/instagram.svg">
+              <img class="im4" src="../images/instagram.svg">
             </a>
             <a href="https://api.whatsapp.com/send?phone=5511914874136&text=%20site?" target="_blank">
-              <img class=im4 src="images/whatsapp.svg">
+              <img class=im4 src="../images/whatsapp.svg">
             </a>
           </div>
         </div>
@@ -124,7 +128,7 @@
     <footer></footer>
 
     <!--|Script|-->
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
     <!--|Script|-->
   </body>
 </html>
