--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" charset="utf-8" content="width=device-width initial-scale= 1.0">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta name="description" content="APAV">
-    <meta name="author" content="APAV">
+    <meta name="author" content="Unilatem">
     <link rel="shortcut icon" href="images/favicon.ico">
     <!--|Meta Config.|-->
 
@@ -38,14 +38,14 @@
         <div class="video-fundo">
           <video autoplay loop>
             <source src="images/APAV.mp4" type="video/mp4">
-            Seu navegador não suporta vídeos.
+            Seu navegador não suporta este vídeo.
           </video>
         </div>
         <h1 class="tt1">Projeto Social<br><br>e Evangelismo</h1>
       </section>
       <section id="inspiracao">
         <div class="dv1">
-          <h2 class="tt2">INSPIRADOS PELA FÉ CRISTÃ</h2>
+          <h2 class="tt2">Inspirados pela fé Cristã</h2>
           <p class="tx1">
             A Associação Projeto Alcançando Vidas dedica-se a servir ao próximo, levando o amor de Deus às comunidades mais necessitadas.
             <br>
@@ -56,8 +56,6 @@
             Nossas caravanas levam esperança a casas de recuperação, aldeias indígenas e comunidades carentes em diversos países. Acreditamos que a fé em ação é capaz de transformar vidas e construir um futuro mais promissor para todos."
           </p>
         </div>
-      </section>
-      <section class="sc3">
         <div class="dv2">
           <div class="dv3">
             <img class="im1" src="images/1.JPG">
@@ -112,7 +110,7 @@
         <div class="dv4">
           <h2 class="tt4">Fale Conosco</h2>
           <p class="tx4">R. Viracopos - Vila Heliopolis, São Paulo - SP, 04236-070</p>
-          <p class="tx4">Seg à Seg das 18:00 às 22:00</p>
+          <p class="tx4">Seg à Dom das 18:00 às 22:00</p>
           <p class="tx4"><a href="tel:+5511914874136" class="tx41">Telefone: +55 (11) 9 1487-4136</a></p>
           <div class="dv5">
             <a href="https://www.instagram.com/associacaoalcancandovidas/" target="_blank">
