--- a/sobre.html
+++ b/sobre.html
@@ -5,12 +5,12 @@
     <meta name="viewport" charset="utf-8" content="width=device-width initial-scale= 1.0">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta name="description" content="APAV">
-    <meta name="author" content="APAV">
+    <meta name="author" content="Unilatem">
     <link rel="shortcut icon" href="images/favicon.ico">
     <!--|Meta Config.|-->
 
     <!--|Title Tab|-->
-    <title>APAV</title>
+    <title>APAV|Sobre Nós</title>
     <!--|Title Tab|-->
 
     <!--|CSS|-->
