--- a/ES/footer.html
+++ b/ES/footer.html
@@ -1,1 +1,4 @@
-<link href=../style.css rel=stylesheet><footer id=ft><p class=fttx>© 2024 Todos los derechos reservados Unilatem<strong id=anoatual><script>document.getElementById("anoatual").innerHTML=(new Date).getFullYear()</script></strong>.</footer>
+<link href="../style.css" rel="stylesheet">
+<footer id="ft">
+    <p class="fttx">© 2025 Todos los derechos reservados Asociación Proyecto Alcanzando Vidas y Unilatem.
+</footer>
