--- a/contato.html
+++ b/contato.html
@@ -5,7 +5,7 @@
     <meta name="viewport" charset="utf-8" content="width=device-width initial-scale= 1.0">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta name="description" content="APAV">
-    <meta name="author" content="APAV">
+    <meta name="author" content="Unilatem">
     <link rel="shortcut icon" href="images/favicon.ico">
     <!--|Meta Config.|-->
 
