--- a/doar.html
+++ b/doar.html
@@ -5,16 +5,16 @@
     <meta name="viewport" charset="utf-8" content="width=device-width initial-scale= 1.0">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta name="description" content="APAV">
-    <meta name="author" content="APAV">
+    <meta name="author" content="Unilatem">
     <link rel="shortcut icon" href="images/favicon.ico">
     <!--|Meta Config.|-->
 
     <!--|Title Tab|-->
-    <title>APAV</title>
+    <title>APAV|Doar</title>
     <!--|Title Tab|-->
 
     <!--|CSS|-->
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
     <!--|CSS|-->
 
     <!--|Script Header and Footer Import|-->
