--- a/header.html
+++ b/header.html
@@ -1,15 +1,14 @@
 <link href="style.css" rel="stylesheet">
 <header id="hd">
-    <div id="lg"><a href="/"><img src="images/logo.jpg" class="lg"></a>
-    </div>
+    <div id="lg"><a href="/"><img src="images/logo.jpg" class="lg"></a></div>
     <ul id="ls">
-        <li><a href="/" class="nv"><img src=images/home.svg class="im">HOME</a>
-        <li><a href="/sobre.html" class="nv"><img src=images/sobre.svg class="im">SOBRE NÓS</a>
-        <li><a href="/contato.html" class="nv"><img src=images/contato.svg class="im">CONTATO</a>
-        <li><a href="/doar.html" class="nv"><img src=images/doar.svg class="im">DOE AGORA</a>
-        <li><a href="/" class="nv"><img src=images/fb.svg class="im">PT/BR</a>
-        <li><a href="EN/en.html" class="nv"><img src=images/fs.svg class="im">EN</a>
-        <li><a href="ES/es.html" class="nv"><img src=images/fe.svg class="im">ES</a>
+        <li><a href="/" class="nv"><img src="images/home.svg" class="im">HOME</a>
+        <li><a href="/sobre.html" class="nv"><img src="images/sobre.svg" class="im">SOBRE NÓS</a>
+        <li><a href="/contato.html" class="nv"><img src="images/contato.svg" class="im">CONTATO</a>
+        <li><a href="/doar.html" class="nv"><img src="images/doar.svg" class="im">DOE AGORA</a>
+        <li><a href="/" class="nv"><img src="images/fb.svg" class="im">PT/BR</a>
+        <li><a href="EN/en.html" class="nv"><img src="images/fs.svg" class="im">EN</a>
+        <li><a href="ES/es.html" class="nv"><img src="images/fe.svg" class="im">ES</a>
     </ul>
     <div id="divhd" onclick="toggleMenu()"><img src="images/menumobile.svg" id="mnm"></div>
     <ul id="lsm">
@@ -17,7 +16,7 @@
         <li><a href="/" class="nvls" onclick="toggleoffMenu()">HOME<img src="images/home.svg" class="imls"></a>
         <li><a href="/sobre.html" class="nvls" onclick="toggleoffMenu()">SOBRE NÓS<img src="images/sobre.svg" class="imls"></a>
         <li><a href="/contato.html" class="nvls" onclick="toggleoffMenu()">CONTATO<img src="images/contato.svg" class="imls"></a>
-        <li><a href="/doar.html" class="nvls"><img src=images/doar.svg class="imls">DOE AGORA</a>
+        <li><a href="/doar.html" class="nvls"><img src="images/doar.svg" class="imls">DOE AGORA</a>
         <li><a href="/" class="nvls" onclick="toggleoffMenu()">PT/BR<img src="images/fb.svg" class="imls"></a>
         <li><a href="EN/en.html" class="nvls" onclick="toggleoffMenu()">EN<img src="images/fs.svg" class="imls"></a>
         <li><a href="ES/es.html" class="nvls" onclick="toggleoffMenu()">ES<img src="images/fe.svg" class="imls"></a>
