--- a/EN/about.html
+++ b/EN/about.html
@@ -39,8 +39,9 @@
           <h2 class="sobrett1">About Us</h2>
         </div>
         <div class="sobredv1">
-          <div class="sobredv2">
-            <p class="sobretx1">The Associação Projeto Alcançando Vidas is a missionary and humanitarian initiative that aims to bring the message of love, hope and transformation to those who need it most. Founded with the purpose of sharing the gospel of Jesus Christ, the project works with people in extremely vulnerable situations, such as homeless people, former drug users, former drug dealers, indigenous people, gypsies and many other needy communities around the world.</p>
+          <div class="sobredv12">
+            <img src="../images/hands.svg" class="sobreim">
+            <p class="sobretx">The Associação Projeto Alcançando Vidas is a missionary and humanitarian initiative that aims to bring the message of love, hope and transformation to those who need it most. Founded with the purpose of sharing the gospel of Jesus Christ, the project works with people in extremely vulnerable situations, such as homeless people, former drug users, former drug dealers, indigenous people, gypsies and many other needy communities around the world.</p>
           </div>
           <br>
           <br>
@@ -48,7 +49,7 @@
             <div class="sobredv4">
               <p class="sobretx1">With an approach centered on the love and sacrifice of Jesus, who gave his life to save humanity, the Association seeks to reach those who are often forgotten by society. The goal is not only to offer spiritual comfort, but also to provide the dignity and transformation that only the gospel can bring. Furthermore, the Association offers psychological, social and even material support, so that these people can reintegrate into society with new goals and hopes.</p>
             </div>
-            <img class="sobreim" src="../images/5.jpg">
+            <img class="sobreim1" src="../images/5.jpg">
           </div>
           <br>
           <br>
@@ -56,7 +57,7 @@
             <div class="sobredv4">
               <p class="sobretx1">With actions carried out in countries such as Brazil, Bolivia, Paraguay, Chile, Africa, among others, the Alcançando Vidas Project is dedicated to reaching the most remote corners and the most marginalized populations. Through visits, distribution of food, clothing, and medical services, the project strives to make a difference in the lives of those who live on the streets or in conditions of extreme poverty.</p>
             </div>
-            <img class="sobreim" src="../images/6.jpg">
+            <img class="sobreim1" src="../images/6.jpg">
           </div>
           <br>
           <br>
@@ -64,7 +65,7 @@
             <div class="sobredv4">
               <p class="sobretx1">The missionaries who are part of this project not only share the word of Jesus, but become friends, counselors and true supporters, providing a path of rehabilitation and restoration for those who wish to start over. They believe that, through the unconditional love of Christ, lives can be transformed and destinies can be changed, regardless of the past or the difficulties faced.</p>
             </div>
-            <img class="sobreim" src="../images/7.jpg">
+            <img class="sobreim1" src="../images/3.JPG">
           </div>
           <br>
           <br>
@@ -72,7 +73,7 @@
             <div class="sobredv4">
               <p class="sobretx1">The Associação Projeto Alcançando Vidas is more than just social work: it is a mission of faith that crosses borders, overcomes cultural barriers and, above all, touches hearts. It is a true demonstration that Jesus' sacrifice knows no limits, and divine love is capable of restoring even the most lost lives.</p>
             </div>
-            <img class="sobreim" src="../images/8.jpg">
+            <img class="sobreim1" src="../images/8.jpg">
           </div>
           <br>
           <br>
@@ -80,7 +81,7 @@
             <div class="sobredv4">
               <p class="sobretx1">Join us on this mission of transformation. Together, we can make a difference in the lives of thousands of people and thus spread the message of hope and renewal that comes from Christ.</p>
             </div>
-            <img class="sobreim" src="../images/9.jpg">
+            <img class="sobreim1" src="../images/9.jpg">
           </div>
         </div>
       </section>
