--- a/EN/en.html
+++ b/EN/en.html
@@ -85,7 +85,7 @@
         </div>
         <div class="dv2">
           <div class="dv3">
-            <img class="im1" src="../images/3.JPG">
+            <img class="im1" src="../images/10.jpeg">
           </div>
           <div class="dv3">
             <h2 class="tt3">Values</h2>
