--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
         <div class="dv2">
           <div class="dv3">
-            <img class="im1" src="images/3.JPG">
+            <img class="im1" src="images/10.jpeg">
           </div>
           <div class="dv3">
             <h2 class="tt3">Valores</h2>
@@ -95,13 +95,7 @@
               Transparência: Agimos com clareza e responsabilidade em todas as ações, promovendo confiança e respeito junto às famílias, parceiros e colaboradores.
               <br>
               <br>
-              Compromisso Social: Somos dedicados à causa da transformação social e trabalhamos incansavelmente para proporcionar melhoria contínua nas vidas das famílias que apoiamos.
-              <br>
-              <br>
               Solidariedade: Acreditamos na força da comunidade e no poder da união para superar desafios e construir um ambiente mais inclusivo para todos.
-              <br>
-              <br>
-              Resiliência: Enfrentamos obstáculos com determinação e incentivamos as famílias a superarem suas dificuldades, oferecendo suporte contínuo e adaptado a cada realidade.
             </p>
           </div>
         </div>
