--- a/sobre.html
+++ b/sobre.html
@@ -39,8 +39,9 @@
           <h2 class="sobrett1">Sobre Nós</h2>
         </div>
         <div class="sobredv1">
-          <div class="sobredv2">
-            <p class="sobretx1">A Associação Projeto Alcançando Vidas é uma iniciativa missionária e humanitária que visa levar a mensagem de amor, esperança e transformação para aqueles que mais necessitam. Fundada com o propósito de compartilhar o evangelho de Jesus Cristo, o projeto atua com pessoas em situações de extrema vulnerabilidade, como moradores de rua, ex-usuários de drogas, ex-traficantes, indígenas, ciganos e muitas outras comunidades carentes ao redor do mundo.</p>
+          <div class="sobredv12">
+            <img src="images/hands.svg" class="sobreim">
+            <p class="sobretx">A Associação Projeto Alcançando Vidas é uma iniciativa missionária e humanitária que visa levar a mensagem de amor, esperança e transformação para aqueles que mais necessitam. Fundada com o propósito de compartilhar o evangelho de Jesus Cristo, o projeto atua com pessoas em situações de extrema vulnerabilidade, como moradores de rua, ex-usuários de drogas, ex-traficantes, indígenas, ciganos e muitas outras comunidades carentes ao redor do mundo.</p>
           </div>
           <br>
           <br>
@@ -48,7 +49,7 @@
             <div class="sobredv4">
               <p class="sobretx1">Com uma abordagem centrada no amor e no sacrifício de Jesus, que deu sua vida para salvar a humanidade, a Associação busca alcançar aqueles que, muitas vezes, são esquecidos pela sociedade. O objetivo é não apenas oferecer o consolo espiritual, mas também proporcionar a dignidade e a transformação que só o evangelho pode trazer. Além disso, a Associação oferece apoio psicológico, social e até mesmo material, para que essas pessoas possam reintegrar-se à sociedade com novos objetivos e esperanças.</p>
             </div>
-            <img class="sobreim" src="images/5.jpg">
+            <img class="sobreim1" src="images/5.jpg">
           </div>
           <br>
           <br>
@@ -56,7 +57,7 @@
             <div class="sobredv4">
               <p class="sobretx1">Com ações realizadas em países como Brasil, Bolívia, Paraguai, Chile, África, entre outros, o Projeto Alcançando Vidas se dedica a alcançar os recantos mais remotos e as populações mais marginalizadas. Através de visitas, distribuição de alimentos, roupas, e serviços médicos, o projeto se empenha em fazer a diferença na vida daqueles que vivem nas ruas ou em condições de extrema pobreza.</p>
             </div>
-            <img class="sobreim" src="images/6.jpg">
+            <img class="sobreim1" src="images/6.jpg">
           </div>
           <br>
           <br>
@@ -64,7 +65,7 @@
             <div class="sobredv4">
               <p class="sobretx1">Os missionários que fazem parte deste projeto não apenas compartilham a palavra de Jesus, mas se tornam amigos, conselheiros e verdadeiros apoiadores, proporcionando um caminho de reabilitação e restauração para aqueles que desejam recomeçar. Eles acreditam que, através do amor incondicional de Cristo, vidas podem ser transformadas e destinos podem ser mudados, independente do passado ou das dificuldades enfrentadas.</p>
             </div>
-            <img class="sobreim" src="images/7.jpg">
+            <img class="sobreim1" src="images/3.JPG">
           </div>
           <br>
           <br>
@@ -72,7 +73,7 @@
             <div class="sobredv4">
               <p class="sobretx1">A Associação Projeto Alcançando Vidas é mais do que um trabalho social: é uma missão de fé que atravessa fronteiras, ultrapassa barreiras culturais e, acima de tudo, toca corações. É uma verdadeira demonstração de que o sacrifício de Jesus não conhece limites, e o amor divino é capaz de restaurar até as vidas mais perdidas.</p>
             </div>
-            <img class="sobreim" src="images/8.jpg">
+            <img class="sobreim1" src="images/8.jpg">
           </div>
           <br>
           <br>
@@ -80,7 +81,7 @@
             <div class="sobredv4">
               <p class="sobretx1">Junte-se a nós nessa missão de transformação. Juntos, podemos fazer a diferença na vida de milhares de pessoas e, assim, espalhar a mensagem de esperança e renovação que vem de Cristo.</p>
             </div>
-            <img class="sobreim" src="images/9.jpg">
+            <img class="sobreim1" src="images/9.jpg">
           </div>
         </div>
       </section>
