--- a/EN/donate.html
+++ b/EN/donate.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta name="description" content="APAV">
     <meta name="author" content="Unilatem">
-    <link rel="shortcut icon" href="../images/favicon.ico">
+    <link rel="shortcut icon" href="images/favicon.ico">
     <!--|Meta Config.|-->
 
     <!--|Title Tab|-->
@@ -14,7 +14,7 @@
     <!--|Title Tab|-->
 
     <!--|CSS|-->
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
     <!--|CSS|-->
 
     <!--|Script Header and Footer Import|-->
@@ -31,21 +31,35 @@
     <main>
         <section id="doar">
           <h2 class="doartt1">Doações | Donaciones | Donations</h2>
+          <h3 class="doartt1">PIX</h3>
           <div class="doardv1">
             <div class="doardv2">
-              <h3 class="doartt2">PIX no QRCode BB</h3>
               <ul>
-              <li class="doartx1">Banco do Brasil</li>
-              <li class="doartx1">Agência:</li>
-              <li class="doartx1">Conta:</li>
-              <li class="doartx1">Nome:</li>
+              <li class="doartx1">Valor:R$10</li>
               </ul>
               <img class="doarim" src="../images/qrcode.jpeg">
             </div>
             <div class="doardv2">
-              <h3 class="doartt2">PIX no QRCode Caixa</h3>
               <ul>
-              <li class="doartx1">Banco Caixa Econômica Federal</li>
+                <li class="doartx1">Valor:R$20</li>
+              </ul>
+              <img class="doarim" src="../images/qrcode.jpeg">
+            </div>
+            <div class="doardv2">
+              <ul>
+                <li class="doartx1">Valor:R$50</li>
+              </ul>
+              <img class="doarim" src="../images/qrcode.jpeg">
+            </div>
+            <div class="doardv2">
+              <ul>
+                <li class="doartx1">Valor:R$100</li>
+              </ul>
+              <img class="doarim" src="../images/qrcode.jpeg">
+            </div>
+            <div class="doardv2">
+              <ul>
+              <li class="doartx1">Banco Caixa</li>
               <li class="doartx1">Agência:</li>
               <li class="doartx1">Conta:</li>
               <li class="doartx1">Nome:</li>
