--- a/ES/sobre.html
+++ b/ES/sobre.html
@@ -39,8 +39,9 @@
           <h2 class="sobrett1">Sobre Nosotros</h2>
         </div>
         <div class="sobredv1">
-          <div class="sobredv2">
-            <p class="sobretx1">La Associação Projeto Alcançando Vidas es una iniciativa misionera y humanitaria que tiene como objetivo llevar el mensaje de amor, esperanza y transformación a quienes más lo necesitan. Fundado con el propósito de compartir el evangelio de Jesucristo, el proyecto trabaja con personas en situaciones extremadamente vulnerables, como personas sin hogar, ex consumidores de drogas, ex narcotraficantes, indígenas, gitanos y muchas otras comunidades necesitadas alrededor del mundo.</p>
+          <div class="sobredv12">
+            <img src="../images/hands.svg" class="sobreim">
+            <p class="sobretx">La Associação Projeto Alcançando Vidas es una iniciativa misionera y humanitaria que tiene como objetivo llevar el mensaje de amor, esperanza y transformación a quienes más lo necesitan. Fundado con el propósito de compartir el evangelio de Jesucristo, el proyecto trabaja con personas en situaciones extremadamente vulnerables, como personas sin hogar, ex consumidores de drogas, ex narcotraficantes, indígenas, gitanos y muchas otras comunidades necesitadas alrededor del mundo.</p>
           </div>
           <br>
           <br>
@@ -48,7 +49,7 @@
             <div class="sobredv4">
               <p class="sobretx1">Con un enfoque centrado en el amor y sacrificio de Jesús, quien dio su vida para salvar a la humanidad, la Asociación busca llegar a aquellos que muchas veces son olvidados por la sociedad. El objetivo no es sólo ofrecer consuelo espiritual, sino también brindar la dignidad y la transformación que solo el evangelio puede traer. Además, la Asociación ofrece apoyo psicológico, social e incluso material, para que estas personas puedan reintegrarse a la sociedad con nuevas metas y esperanzas.</p>
             </div>
-            <img class="sobreim" src="../images/5.jpg">
+            <img class="sobreim1" src="../images/5.jpg">
           </div>
           <br>
           <br>
@@ -56,7 +57,7 @@
             <div class="sobredv4">
               <p class="sobretx1">Con acciones realizadas en países como Brasil, Bolivia, Paraguay, Chile, África, entre otros, el Proyecto Alcançando Vidas se dedica a llegar a los rincones más remotos y a las poblaciones más marginadas. A través de visitas, distribución de alimentos, ropa y servicios médicos, el proyecto busca marcar una diferencia en la vida de quienes viven en la calle o en condiciones de extrema pobreza.</p>
             </div>
-            <img class="sobreim" src="../images/6.jpg">
+            <img class="sobreim1" src="../images/6.jpg">
           </div>
           <br>
           <br>
@@ -64,7 +65,7 @@
             <div class="sobredv4">
               <p class="sobretx1">Los misioneros que forman parte de este proyecto no sólo comparten la palabra de Jesús, sino que se convierten en amigos, consejeros y verdaderos apoyos, brindando un camino de rehabilitación y restauración para quienes desean empezar de nuevo. Creen que, a través del amor incondicional de Cristo, se pueden transformar vidas y cambiar destinos, independientemente del pasado o de las dificultades enfrentadas.</p>
             </div>
-            <img class="sobreim" src="../images/7.jpg">
+            <img class="sobreim1" src="../images/3.JPG">
           </div>
           <br>
           <br>
@@ -72,7 +73,7 @@
             <div class="sobredv4">
               <p class="sobretx1">La Associação Projeto Alcançando Vidas es más que una simple obra social: es una misión de fe que cruza fronteras, supera barreras culturales y, sobre todo, toca corazones. Es una verdadera demostración de que el sacrificio de Jesús no conoce límites y que el amor divino es capaz de restaurar incluso las vidas más perdidas.</p>
             </div>
-            <img class="sobreim" src="../images/8.jpg">
+            <img class="sobreim1" src="../images/8.jpg">
           </div>
           <br>
           <br>
@@ -80,7 +81,7 @@
             <div class="sobredv4">
               <p class="sobretx1">Únase a nosotros en esta misión de transformación. Juntos podemos marcar la diferencia en la vida de miles de personas y así difundir el mensaje de esperanza y renovación que viene de Cristo.</p>
             </div>
-            <img class="sobreim" src="../images/9.jpg">
+            <img class="sobreim1" src="../images/9.jpg">
           </div>
         </div>
       </section>
