--- a/sobre.html
+++ b/sobre.html
@@ -41,13 +41,13 @@
         <div class="sobredv1">
           <div class="sobredv12">
             <img src="images/hands.svg" class="sobreim">
-            <p class="sobretx">A Associação Projeto Alcançando Vidas é uma iniciativa missionária e humanitária que visa levar a mensagem de amor, esperança e transformação para aqueles que mais necessitam. Fundada com o propósito de compartilhar o evangelho de Jesus Cristo, o projeto atua com pessoas em situações de extrema vulnerabilidade, como moradores de rua, ex-usuários de drogas, ex-traficantes, indígenas, ciganos e muitas outras comunidades carentes ao redor do mundo.</p>
+            <p class="sobretx">A APAV - Associação Alcançando Vidas é uma iniciativa missionária e humanitária dedicada a levar amor, epserança e transformação àqueles que mais necessitam. Fundada com o propósito de compartilhar o evangelho de Jesus Cristo, a APAV atua junto a pessoas em situação de extrema vulnerabilidade, incluindo moradores em situação de rua, ex-dependentes químicos, povos indígenas, sertanejos, quilombolas e diversos outros povos carentes ao redor do mundo.</Video></p>
           </div>
           <br>
           <br>
           <div class="sobredv3">
             <div class="sobredv4">
-              <p class="sobretx1">Com uma abordagem centrada no amor e no sacrifício de Jesus, que deu sua vida para salvar a humanidade, a Associação busca alcançar aqueles que, muitas vezes, são esquecidos pela sociedade. O objetivo é não apenas oferecer o consolo espiritual, mas também proporcionar a dignidade e a transformação que só o evangelho pode trazer. Além disso, a Associação oferece apoio psicológico, social e até mesmo material, para que essas pessoas possam reintegrar-se à sociedade com novos objetivos e esperanças.</p>
+              <p class="sobretx1">Com ações realizadas em países como Brasil, Bolívia, Paraguai, Chile, África, entre outros, o Projeto Alcançando Vidas se dedica a alcançar os recantos mais remotos e as populações mais marginalizadas. Através de visitas, distribuição de alimentos, roupas, e serviços médicos, o projeto se empenha em fazer a diferença na vida daqueles que vivem nas ruas ou em condições de extrema pobreza.</p>
             </div>
             <img class="sobreim1" src="images/5.jpg">
           </div>
@@ -55,7 +55,7 @@
           <br>
           <div class="sobredv2">
             <div class="sobredv4">
-              <p class="sobretx1">Com ações realizadas em países como Brasil, Bolívia, Paraguai, Chile, África, entre outros, o Projeto Alcançando Vidas se dedica a alcançar os recantos mais remotos e as populações mais marginalizadas. Através de visitas, distribuição de alimentos, roupas, e serviços médicos, o projeto se empenha em fazer a diferença na vida daqueles que vivem nas ruas ou em condições de extrema pobreza.</p>
+              <p class="sobretx1">Além disso, a Associação conta com uma equipe de voluntários da área da saúde, que oferece atendimento em nosso consultório para dar suporte a essas famílias. Entre os profissionais, temos médicos, psicólogos e fonoaudiólogos. Para além da assistência imediata, a Associação busca sempre maneiras de reintegrar essas pessoas à sociedade, proporcionando novos objetivos e esperanças por meio do trabalho.</p>
             </div>
             <img class="sobreim1" src="images/6.jpg">
           </div>
@@ -63,7 +63,7 @@
           <br>
           <div class="sobredv3">
             <div class="sobredv4">
-              <p class="sobretx1">Os missionários que fazem parte deste projeto não apenas compartilham a palavra de Jesus, mas se tornam amigos, conselheiros e verdadeiros apoiadores, proporcionando um caminho de reabilitação e restauração para aqueles que desejam recomeçar. Eles acreditam que, através do amor incondicional de Cristo, vidas podem ser transformadas e destinos podem ser mudados, independente do passado ou das dificuldades enfrentadas.</p>
+              <p class="sobretx1">Os voluntários/ missionários são o coração deste projeto, movidos pelo amor e pelo desejo genuíno de ajudar o próximo tendo espelho Cristo que não fez acepção de ninguém. Com dedicação e compaixão, eles oferecem seu tempo, talentos e esforços para transformar vidas, sem esperar nada em troca. Seu compromisso vai além da assistência; eles levam esperança, conforto e dignidade àqueles que mais precisam. Cada gesto, por menor que seja, reflete o verdadeiro significado do amor ao próximo e faz a diferença na caminhada de quem busca uma nova chance.</p>
             </div>
             <img class="sobreim1" src="images/3.JPG">
           </div>
@@ -71,7 +71,7 @@
           <br>
           <div class="sobredv2">
             <div class="sobredv4">
-              <p class="sobretx1">A Associação Projeto Alcançando Vidas é mais do que um trabalho social: é uma missão de fé que atravessa fronteiras, ultrapassa barreiras culturais e, acima de tudo, toca corações. É uma verdadeira demonstração de que o sacrifício de Jesus não conhece limites, e o amor divino é capaz de restaurar até as vidas mais perdidas.</p>
+              <p class="sobretx1">Com uma abordagem centrada no amor e no sacrifício de Jesus, que deu sua vida para salvar a humanidade, a Associação busca alcançar aqueles que, muitas vezes, são esquecidos pela sociedade. O objetivo não é apenas oferecer consolo espiritual, mas também restaurar a dignidade e promover a transformação por meio do apoio assistencial.</p>
             </div>
             <img class="sobreim1" src="images/8.jpg">
           </div>
@@ -79,10 +79,11 @@
           <br>
           <div class="sobredv3">
             <div class="sobredv4">
-              <p class="sobretx1">Junte-se a nós nessa missão de transformação. Juntos, podemos fazer a diferença na vida de milhares de pessoas e, assim, espalhar a mensagem de esperança e renovação que vem de Cristo.</p>
+              <p class="sobretx1">Junte-se a nós nessa missão de transformação! Unidos, podemos impactar a vida de milhares de pessoas, levando esperança, renovação e o amor de Cristo àqueles que mais precisam. Faça parte dessa mudança!</p>
             </div>
             <img class="sobreim1" src="images/9.jpg">
           </div>
+          <a class="sobrebt">QUERO SER UM VOLUNTÁRIO<br><img class="sobreim2" src="images/heart.svg"></a>
         </div>
       </section>
     </main>
